loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:3: error: not found: value estFaceMure
while (!estFaceMure()){
        ^